Fix legend init bug & spacing
Clear any existing legend items before drawing, and fixed the css
so that the text of the legend doesn't wrap.

--- a/css/main.css
+++ b/css/main.css
@@ -19,8 +19,9 @@ p,h1,a {
 	position: absolute;
 	top: 120px;
 	left: 85%;
-	width: 20%;
-	height: 500px;
+	width: auto;
+	height: auto;
+	white-space: nowrap;
 }
 
 /* color labels for legend */
